# DS

./: LICENSE  README.md
BPEL-ODE/: README.md
P1/ArranzGuerreroRoman-1/: .project
P1/ArranzGuerreroRoman-2/: .project
P1/ArranzGuerreroRoman-3/: .project
P1/ArranzGuerreroRoman-4/: .project
P1/ArranzGuerreroRoman1/: .project
P1/ArranzGuerreroRoman2/: .classpath  .project
P1/ArranzGuerreroRoman3/: .project
P1/ArranzGuerreroRoman4/: .project
P3/SCAV/: .project
P3/diagramas/: p3.vpp  p3.vpp~2  p3.vpp~3
P3/src/controlVelocidad/: CalculadorVel.java  ControlVelocidad.java  Eje.java  Freno.java  Reloj.java
P3/src/monitorizacion/: CalculadorVelMed.java  Deposito.java  Notificaciones.java  RelojM.java  Reseteo.java
P3/src/simulador/: Interfaz.java  Observable.java  PanelBotones.java  PanelEtiquetas.java  Simulacion.java
P3/test/testControlVelocidad/: CalculadorVelTest.java  ControlVelocidadTest.java  MotorTest.java  PalancaTest.java  PedalTest.java  RelojTest.java
P3/test/testMonitorizacion/: CalculadorVelMedTest.java  DepositoTest.java  (+3 more)
Patrones/: README.md
Patrones/Adaptador/: README.md
Patrones/Bridge/: README.md
Patrones/Bridge/C++/BridgeSimple/: CMakeLists.txt
Patrones/Bridge/C++/BridgeSimple/include/: Abstraccion.h  AbstraccionRefinada.h  ImplementacionA.h  ImplementacionB.h  Implementador.h
Patrones/Bridge/C++/BridgeSimple/src/: main.cpp
Patrones/Builder/: README.md
Patrones/Delegacion/: README.md
Patrones/Fachada/: README.md
Patrones/Factoria/: Makefile
Patrones/Inmutable/: README.md
Patrones/Singleton/: README.md
(+281 files in other folders)
